# Set up the meta data of the project
[project]
name = "aa-pytools"
version = "0.0.1"
description = "This project contains useful tools to work with Automation Anywhere + Python"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "AND3SIL4", email = "devaul.fs@gmail.com" }]
maintainers = [{ name = "AND3SIL4", email = "devaul.fs@gmail.com" }]
keywords = ["Automation Anywhere", "Integration", "Python", "RPA"]
# todo: improve the classifiers when finish the package. https://pypi.org/classifiers
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "build>=1.3.0",
  "pytest>=9.0.2",
  "setuptools>=80.9.0",
  "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/AND3SIL4/aa-pytools"
Issues = "https://github.com/AND3SIL4/aa-pytools/issues"

# We shall choose a build back end to make the build
[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"
